# amplifier-bundle-routing-matrix

./: bundle.md
behaviors/: routing.yaml
context/: routing-instructions.md
docs/: MATRIX_CURATOR_GUIDE.md
modules/hooks-routing/: pyproject.toml
modules/hooks-routing/amplifier_hooks_routing/: __init__.py  resolver.py
modules/hooks-routing/amplifier_module_hooks_routing/: __init__.py  matrix_loader.py
modules/hooks-routing/tests/: conftest.py  test_curator_guide.py  test_init.py  test_matrix_loader.py  test_matrix_validation.py  test_resolver.py  test_role_definitions.py  test_routing_instructions.py
routing/: balanced.yaml  economy.yaml  quality.yaml
