[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-hooks-routing"
version = "0.1.0"
description = "Hook module for routing matrix model selection"
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.entry-points."amplifier.modules"]
hooks-routing = "amplifier_hooks_routing:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_hooks_routing"]
